--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,8 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+      <!-- FONT AWESOME -->
+      <script src="https://kit.fontawesome.com/1e1686e54e.js" crossorigin="anonymous"></script>
     <title>Calcula mi descuento ya!</title>
   </head>
   <body>
