--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
@@ -24,8 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-      <!-- FONT AWESOME -->
-      <script src="https://kit.fontawesome.com/1e1686e54e.js" crossorigin="anonymous"></script>
+    <!-- FONT AWESOME -->
+    <script
+      src="https://kit.fontawesome.com/1e1686e54e.js"
+      crossorigin="anonymous"
+    ></script>
     <title>Calcula mi descuento ya!</title>
   </head>
   <body>
